backend/k8s/templates/graphql-engine-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
    kompose.service.expose: api.cookwherever.com
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: graphql-engine
  name: graphql-engine
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: graphql-engine
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
        kompose.service.expose: api.cookwherever.com
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.service: graphql-engine
    spec:
      containers:
        - env:
            - name: AUTH_ACCESS_CONTROL_ALLOWED_EMAILS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_ACCESS_CONTROL_ALLOWED_EMAILS
                  name: env
            - name: AUTH_ACCESS_CONTROL_ALLOWED_EMAIL_DOMAINS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_ACCESS_CONTROL_ALLOWED_EMAIL_DOMAINS
                  name: env
            - name: AUTH_ACCESS_CONTROL_ALLOWED_REDIRECT_URLS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_ACCESS_CONTROL_ALLOWED_REDIRECT_URLS
                  name: env
            - name: AUTH_ACCESS_CONTROL_BLOCKED_EMAILS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_ACCESS_CONTROL_BLOCKED_EMAILS
                  name: env
            - name: AUTH_ACCESS_CONTROL_BLOCKED_EMAIL_DOMAINS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_ACCESS_CONTROL_BLOCKED_EMAIL_DOMAINS
                  name: env
            - name: AUTH_ACCESS_TOKEN_EXPIRES_IN
              valueFrom:
                configMapKeyRef:
                  key: AUTH_ACCESS_TOKEN_EXPIRES_IN
                  name: env
            - name: AUTH_ANONYMOUS_USERS_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_ANONYMOUS_USERS_ENABLED
                  name: env
            - name: AUTH_CLIENT_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH_CLIENT_URL
                  name: env
            - name: AUTH_DISABLE_NEW_USERS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_DISABLE_NEW_USERS
                  name: env
            - name: AUTH_EMAIL_PASSWORDLESS_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_EMAIL_PASSWORDLESS_ENABLED
                  name: env
            - name: AUTH_EMAIL_SIGNIN_EMAIL_VERIFIED_REQUIRED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_EMAIL_SIGNIN_EMAIL_VERIFIED_REQUIRED
                  name: env
            - name: AUTH_EMAIL_TEMPLATE_FETCH_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH_EMAIL_TEMPLATE_FETCH_URL
                  name: env
            - name: AUTH_GRAVATAR_DEFAULT
              valueFrom:
                configMapKeyRef:
                  key: AUTH_GRAVATAR_DEFAULT
                  name: env
            - name: AUTH_GRAVATAR_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_GRAVATAR_ENABLED
                  name: env
            - name: AUTH_GRAVATAR_RATING
              valueFrom:
                configMapKeyRef:
                  key: AUTH_GRAVATAR_RATING
                  name: env
            - name: AUTH_HOST
              valueFrom:
                configMapKeyRef:
                  key: AUTH_HOST
                  name: env
            - name: AUTH_JWT_CUSTOM_CLAIMS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_JWT_CUSTOM_CLAIMS
                  name: env
            - name: AUTH_LOCALE_ALLOWED_LOCALES
              valueFrom:
                configMapKeyRef:
                  key: AUTH_LOCALE_ALLOWED_LOCALES
                  name: env
            - name: AUTH_LOCALE_DEFAULT
              valueFrom:
                configMapKeyRef:
                  key: AUTH_LOCALE_DEFAULT
                  name: env
            - name: AUTH_LOG_LEVEL
              valueFrom:
                configMapKeyRef:
                  key: AUTH_LOG_LEVEL
                  name: env
            - name: AUTH_MFA_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_MFA_ENABLED
                  name: env
            - name: AUTH_MFA_TOTP_ISSUER
              valueFrom:
                configMapKeyRef:
                  key: AUTH_MFA_TOTP_ISSUER
                  name: env
            - name: AUTH_PASSWORD_HIBP_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_PASSWORD_HIBP_ENABLED
                  name: env
            - name: AUTH_PASSWORD_MIN_LENGTH
              valueFrom:
                configMapKeyRef:
                  key: AUTH_PASSWORD_MIN_LENGTH
                  name: env
            - name: AUTH_PORT
              valueFrom:
                configMapKeyRef:
                  key: AUTH_PORT
                  name: env
            - name: AUTH_PROVIDER_GOOGLE_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_PROVIDER_GOOGLE_ENABLED
                  name: env
            - name: AUTH_PROVIDER_STRAVA_CLIENT_ID
              valueFrom:
                configMapKeyRef:
                  key: AUTH_PROVIDER_STRAVA_CLIENT_ID
                  name: env
            - name: AUTH_PROVIDER_STRAVA_CLIENT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: AUTH_PROVIDER_STRAVA_CLIENT_SECRET
                  name: env
            - name: AUTH_PROVIDER_STRAVA_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_PROVIDER_STRAVA_ENABLED
                  name: env
            - name: AUTH_REFRESH_TOKEN_EXPIRES_IN
              valueFrom:
                configMapKeyRef:
                  key: AUTH_REFRESH_TOKEN_EXPIRES_IN
                  name: env
            - name: AUTH_SERVER_URL
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SERVER_URL
                  name: env
            - name: AUTH_SMS_PASSWORDLESS_ENABLED
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SMS_PASSWORDLESS_ENABLED
                  name: env
            - name: AUTH_SMTP_AUTH_METHOD
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SMTP_AUTH_METHOD
                  name: env
            - name: AUTH_SMTP_PASS
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SMTP_PASS
                  name: env
            - name: AUTH_SMTP_PORT
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SMTP_PORT
                  name: env
            - name: AUTH_SMTP_SECURE
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SMTP_SECURE
                  name: env
            - name: AUTH_SMTP_SENDER
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SMTP_SENDER
                  name: env
            - name: AUTH_SMTP_USER
              valueFrom:
                configMapKeyRef:
                  key: AUTH_SMTP_USER
                  name: env
            - name: AUTH_USER_ALLOWED_ROLES
              valueFrom:
                configMapKeyRef:
                  key: AUTH_USER_ALLOWED_ROLES
                  name: env
            - name: AUTH_USER_DEFAULT_ALLOWED_ROLES
              valueFrom:
                configMapKeyRef:
                  key: AUTH_USER_DEFAULT_ALLOWED_ROLES
                  name: env
            - name: AUTH_USER_DEFAULT_ROLE
              valueFrom:
                configMapKeyRef:
                  key: AUTH_USER_DEFAULT_ROLE
                  name: env
            - name: HASURA_GRAPHQL_ADMIN_SECRET
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_ADMIN_SECRET
                  name: env
            - name: HASURA_GRAPHQL_DATABASE_URL
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_DATABASE_URL
                  name: env
            - name: HASURA_GRAPHQL_ENABLE_CONSOLE
              value: "true"
            - name: HASURA_GRAPHQL_GRAPHQL_URL
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_GRAPHQL_URL
                  name: env
            - name: HASURA_GRAPHQL_JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: HASURA_GRAPHQL_JWT_SECRET
                  name: env
            - name: HASURA_GRAPHQL_LOG_LEVEL
              value: debug
            - name: HASURA_GRAPHQL_UNAUTHORIZED_ROLE
              value: public
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env
          image: hasura/graphql-engine:v2.1.1
          name: graphql-engine
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
