backend/k8s/templates/mailhog-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mailhog
  name: mailhog
spec:
  ports:
    - name: "1025"
      port: 1025
      targetPort: 1025
    - name: "8025"
      port: 8025
      targetPort: 8025
  selector:
    io.kompose.service: mailhog
status:
  loadBalancer: {}
