backend/k8s/templates/graphql-engine-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.yaml -f docker-compose.prod.yaml convert -c -o k8s
    kompose.service.expose: api.cookwherever.com
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: graphql-engine
  name: graphql-engine
spec:
  rules:
    - host: api.cookwherever.com
      http:
        paths:
          - backend:
              service:
                name: graphql-engine
                port:
                  number: 8080
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
